# aeron-rust-wrapper

./: .gitmodules  Cargo.toml  build.rs
cxx_demo_include/: closures_ffi.h  example.h  example2.h  mydata.h
cxx_demo_src/: closures_ffi.cc  example.cc  example2.cc  mydata.cc
cxx_example/: closures_ffi.cc  example.cc
cxx_wrapper/: Aeron.cpp  BufferBuilder.cpp  ClientConductor.cpp  Context.cpp  Counter.cpp  ExclusivePublication.cpp  FragmentAssembler.cpp  Image.cpp  LogBuffers.cpp  Publication.cpp  Subscription.cpp  closures_ffi.h
cxx_wrapper/concurrent/: AtomicBuffer.cpp  CountersReader.cpp
cxx_wrapper/concurrent/logbuffer/: BufferClaim.cpp  Header.cpp
examples/: basic_publisher.rs  basic_subscriber.rs  ping.rs  test_closures_ffi.rs  test_ffi.rs  test_shared_ptr.rs  test_trait_obj.rs  throughput.rs
src/: closures_ffi.rs  example.rs  example2.cc  example2.rs  lib.rs
src/aeron/: aeron.rs  buffer_builder.rs  client_conductor.rs  context.rs  counter.rs  exclusive_publication.rs  fragment_assembler.rs  image.rs  log_buffers.rs  mod.rs  publication.rs  subscription.rs
src/aeron/concurrent/: agent_invoker.rs  agent_runner.rs  atomic_buffer.rs  counters_reader.rs  mod.rs
src/aeron/concurrent/logbuffer/: buffer_claim.rs  header.rs  mod.rs
src/demo/: closures_ffi.rs  example.rs  example2.rs  mod.rs  mydata.rs
