[package]
name = "aeron-rust-wrapper"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { verion = "1.0", features = ["c++17"] }
aeron-rs = { path = "../aeron-rs" }
ffi_helpers = "0.3.0"

[build-dependencies]
cxx-build = "1.0.121"