[package]
name = "aeron-rust-wrapper"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { verion = "1.0", features = ["c++17"] }
aeron-rs = { path = "../aeron-rs" }
ffi_helpers = "0.3.0"
anyhow = "1.0.44"
lazy_static = "1.4"
#fn-traits = "0.1.2"

nix = { version = "0.28", features = ['fs'] }
rustc_version   = "0.4"


[dev-dependencies]
tempfile = "3.10"
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5"
ctrlc = "3.4"

[build-dependencies]
cxx-build = "1.0.121"

[[bin]]
name = "publisher"
path = "examples/basic_publisher.rs"


[[bin]]
name = "subscriber"
path = "examples/basic_subscriber.rs"